--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,12 @@
 build/*
 dist/*
 balkhashdb/*
+docs/*.json
 coverage-report/*
 util/dist/*
 util/build/*
 enrich/dist/*
 enrich/build/*
-integrate/dist/*
-integrate/build/*
 js/dist/*
 js/node_modules/*
 js/coverage/*
